Fix: layout shift on generate number

--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -3,17 +3,13 @@
   padding:20px;
   border-radius: 15px;
   height: 150px;
-  width: 600px;
+  width: 650px;
   background-color: rgb(23, 23, 23);
   font-size: 18px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .timer{
-  padding: 10px;
+  padding: 25px 10px 10px 10px;
 }
 
 button{
